# core-contracts

./: .gitignore  .gitmodules  Cargo.toml  Untitled-2  architecture.drawio  export-envs.js  flat-factory.sol  foundry.toml  get-diamond-abi.js  getDeploymentArgs.js  package.json  pp.js  remappings.txt  test.js
.github/workflows/: test.yml
ABIs/: diamond.json  vault.json
imports/: Diamond.sol  Facets.sol
new-src/libs/: Bytes.sol
new-src/vm/: Interpreters.sol  Utilities.sol  VM.sol
old-src/yc-diamond/: DiamondBase.sol  YC-Diamond-Interface.sol  YC-Diamond.sol
old-src/yc-strategy/: YC-Strategy-Conditionals-Logic.sol  YC-Strategy-Execution-Helpers.sol  YC-Strategy-Names.sol  YC-Strategy-Types.sol  YC-Strategy-Vault-Operations.sol
old-src/yc-vm/: command-utilities.sol  yc-vm-storage.sol
rust_practicing_dump/: checksum_address.rs  main.rs
script/: Diamond.s.sol  Multichain.s.sol  PP.s.sol  classifyUniV2Lp.s.sol  deployCCIPTest.s.sol  deployDiamond.s.sol  depositLp.s.sol  diamondCut.s.sol  execVaultOperation.s.sol  purgeStrats.s.sol  testStrategyRun.s.sol  triggerStrategyRun.s.sol  withdrawEth.s.sol
script/actions/: depositLp.s.sol  execVaultOperation.s.sol  triggerStrategyRun.s.sol
script/classifications/: classifyGlp.s.sol  classifyUniV2Lp.s.sol
src/: CCIPTest.sol  Ownable.sol  Types.sol  YC-Base.sol  YC-Helpers.sol  YC-Strategy-Base.sol  YC-Types.sol  types.sol
src/Libraries/: YC-Diamond-Library.sol
src/YC-Diamond/: YC-Diamond-Interface.sol  YC-Diamond.sol
src/YC-Strategy/: YC-Strategy-Execution-Helpers.sol  (+5 more)
test/: Counter.t.sol  getSelf.t.sol
(+465 files in other folders)
